[package]
name = "cfg_rust_features"
version = "0.1.0"
description = "Set cfg options according to Rust compiler, language, and library features."
authors = ["Derick Eddington"]
license = "Unlicense"
repository = "https://github.com/DerickEddington/cfg_rust_features"
# edition = "2015"
rust-version = "1.0.0"
readme = "README.md"
categories = ["development-tools::build-utils", "rust-patterns"]
keywords = ["cfg", "version", "autoconf", "build", "rustc"]

[workspace]
# The `test_from_another_crate` package is independent, not a member of the
# workspace, since it's a peculiar kind of integration test that tests
# independent use.
exclude = ["test_from_another_crate"]

[dependencies]
autocfg = "1"
version_check = "0.9"

[dev-dependencies]
create_temp_subdir = { path = "create_temp_subdir" }

[[test]]
name = "pretend_build_script"
harness = false
