[package]
name = "cfg_rust_features"
version = "0.1.1-pre"
description = "Set cfg options according to probing for Rust compiler, language, and library features."
authors = ["Derick Eddington"]
license = "Unlicense"
repository = "https://github.com/DerickEddington/cfg_rust_features"
# edition = "2015"
rust-version = "1.0.0"
readme = "README.md"
categories = ["development-tools::build-utils", "rust-patterns"]
keywords = ["cfg", "version", "autoconf", "build", "rustc"]
include = ["src/"]

[workspace]
exclude = [
  # The `test_from_another_crate` package is independent, not a member of the
  # workspace, since it's a peculiar kind of integration test that tests
  # independent use.
  "test_from_another_crate",
  # Specially-modified `autocfg` package(s) that are not part of the workspace,
  # and that are only for special development tests.
  "testing/autocfg",
]

[dependencies]
autocfg = "1"
version_check = "0.9"

[dev-dependencies]
create_temp_subdir = { path = "create_temp_subdir" }

[[test]]
name = "pretend_build_script"
harness = false
