[package]
name = "test_from_another_crate"
description = "Integration test of using the package in the parent directory from another crate."
publish = false
build = "build.rs"
version = "0.0.0"
authors = ["Derick Eddington"]
# edition = "2015"
rust-version = "1.0.0"

[build-dependencies]
cfg_rust_features = { path = ".." }
